force-app/main/default/objects/SalesforceContactPointPhone__x/SalesforceContactPointPhone__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceContactPointPhone</externalName>
    <label>Telefono punto di contatto Salesforce</label>
    <pluralLabel>Telefono punti di contatto Salesforce</pluralLabel>
</CustomObject>