force-app/main/default/objects/SalesforceContactPointPhone__x/fields/IsFaxCapable__c.field-meta.xml
<CustomField>
    <fullName>IsFaxCapable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsFaxCapable</description>
    <externalDeveloperName>IsFaxCapable</externalDeveloperName>
    <label>Può ricevere FAX</label>
    <type>Checkbox</type>
</CustomField>