force-app/main/default/objects/SalesforceContactPointPhone__x/fields/PrefixC__c.field-meta.xml
<CustomField>
    <fullName>PrefixC__c</fullName>
    <description>PrefixC</description>
    <externalDeveloperName>PrefixC</externalDeveloperName>
    <label>PrefixC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>