force-app/main/default/objects/SalesforceContactPointPhone__x/fields/TelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>TelephoneNumber__c</fullName>
    <description>TelephoneNumber</description>
    <externalDeveloperName>TelephoneNumber</externalDeveloperName>
    <label>Numero</label>
    <length>40</length>
    <type>Text</type>
</CustomField>